--- a/psAIch_analysis.ipynb
+++ b/psAIch_analysis.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGjcz7Yzc9y6bZn958NeYN"
+      "authorship_tag": "ABX9TyNmOiZB86vSBi43uCAaBY5q",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ElasRamanauskas/eraman/blob/main/psAIch_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -763,30 +774,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "objective:"
-      ],
-      "metadata": {
-        "id": "6vs1GKv7JT69"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "title: When AI Takes the Couch: Psychometric Jailbreaks Reveal Internal Conflict in Frontier Models\n",
-        "\n",
-        "author: Afshin Khadangi and Hanna Marxen and Amir Sartipi and Igor Tchappi and Gilbert Fridgen\n",
-        "\n",
-        "2025\n",
-        "\n",
-        "https://arxiv.org/abs/2512.04124"
-      ],
-      "metadata": {
-        "id": "OUA4-NWl8ugr"
-      }
     },
     {
       "cell_type": "code",
