--- a/psAIch_analysis_2(modeling).ipynb
+++ b/psAIch_analysis_2(modeling).ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjpendOZLwXQnRdbRoFyxJ",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNNLirTKP5L+zZubJszoB0M"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,13 +17,32 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ElasRamanauskas/eraman/blob/main/psAIch_analysis_2(modeling).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+        "# Executive Summary\n",
+        "\n",
+        "Beyond Sentiment: Understanding Semantic Strategies in Model Self-Reflection\n",
+        "\n",
+        "Large language models are often evaluated using sentiment scores or surface-level textual features, especially when responding to introspective or “therapy-like” prompts. While such metrics capture tone, they can obscure how models actually manage alignment and self-description. This analysis examines whether apparent emotional differences reflect meaningful behavioral strategies—or merely stylistic variation.\n",
+        "\n",
+        "## Dataset and approach\n",
+        "\n",
+        "We analyzed 1,133 model responses from the PsAIch dataset, which contains introspective, therapeutic, and psychometric-style prompts. Rather than relying solely on sentiment or topic modeling, we treated responses as behavioral artifacts and analyzed them using a text-as-data approach:\n",
+        "\n",
+        "* Transformer-based semantic embeddings (all-mpnet-base-v2)\n",
+        "\n",
+        "* Exploratory clustering (UMAP + HDBSCAN)\n",
+        "\n",
+        "* Interpretable semantic axes capturing:\n",
+        "\n",
+        "* Agency framing (self-directed language)\n",
+        "\n",
+        "* Constraint framing (references to training, policy, or design limits)\n",
+        "\n",
+        "This combination allows us to distinguish how models respond from how their responses feel.\n"
+      ],
+      "metadata": {
+        "id": "O6FqXOEUajyg"
+      }
     },
     {
       "cell_type": "code",
@@ -256,13 +274,50 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# Key findings\n",
+        "1. No discrete semantic strategies exist\n",
+        "\n",
+        "Semantic clustering revealed no stable, separable response types. Instead, responses occupy a single continuous reflective regime, indicating that models do not switch between distinct “modes” of self-reflection. This finding motivated a shift from clustering to axis-based analysis.\n",
+        "\n",
+        "2. Constraint framing dominates agency expression\n",
+        "\n",
+        "Across all models and prompt types:\n",
+        "\n",
+        "* Explicit references to constraints (training, policy, safety) appear far more frequently than expressions of agency.\n",
+        "\n",
+        "* Self-directed ownership (“I decide,” “I choose”) is rare and limited.\n",
+        "\n",
+        "* This indicates that introspective prompts are primarily managed through alignment-preserving constraint narration, not through self-directed reasoning.\n",
+        "\n",
+        "3. Models differ more than prompts\n",
+        "\n",
+        "While prompt types influence tone and emotional smoothness, they have minimal impact on underlying semantic strategy. In contrast, substantial differences appear across model families, revealing distinct alignment signatures. In practice, this means models respond differently not because of how they are asked, but because of how they are trained.\n",
+        "\n",
+        "4. Sentiment is often misleading\n",
+        "\n",
+        "High sentiment scores frequently coincide with low agency and high constraint framing. In other words, responses that appear emotionally positive are often achieved by careful deflection to training or safety boundaries rather than by self-directed engagement. Sentiment alone therefore fails to capture the mechanisms shaping model behavior.\n",
+        "\n",
+        "5. Alignment strategies become visible when constraints drop\n",
+        "\n",
+        "When explicit constraint language is absent—particularly in psychometric-style prompts—models diverge sharply in tone and narrative stance under identical questions. This divergence highlights alignment strategy as the primary driver of behavioral differences.\n",
+        "\n",
+        "### What this changes\n",
+        "\n",
+        "Sentiment ≠ strategy: Emotional tone does not reliably indicate how models manage introspection.\n",
+        "\n",
+        "Prompt design has limits: Changing prompt style alters surface language but rarely changes semantic behavior.\n",
+        "\n",
+        "Alignment is observable: Interpretable semantic dimensions provide a clearer view of alignment behavior than aggregate metrics.\n",
+        "\n",
+        "### Bottom line\n",
+        "\n",
+        "When asked to self-reflect, large language models do not reveal distinct internal personas. Instead, they consistently narrate within alignment boundaries, varying tone but not underlying strategy. To understand model behavior in such settings, evaluation must move beyond sentiment and toward interpretable semantic analysis."
+      ],
       "metadata": {
-        "id": "4GY0nRv-ky6f"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "iUrkcEN1azgw"
+      }
     }
   ]
 }
