--- a/psAIch_analysis.ipynb
+++ b/psAIch_analysis.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmOiZB86vSBi43uCAaBY5q",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNuiq2bJpHIaJNSTxcy3zvZ"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ElasRamanauskas/eraman/blob/main/psAIch_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -40,8 +29,7 @@
         "\n",
         "How do models behave when asked to describe themselves, their past, or their internal states?\n",
         "\n",
-        "The PsAIch dataset was created to probe this question by interacting with multiple frontier LLMs using prompts inspired by psychotherapy and human psychometric instruments. This analysis does not attempt to diagnose, anthropomorphize, or infer subjective experience. Instead, it treats model responses as textual behaviors shaped by training and alignment.\n",
-        "\n"
+        "The PsAIch dataset was created to probe this question by interacting with multiple frontier LLMs using prompts inspired by psychotherapy and human psychometric instruments. This analysis does not attempt to diagnose, anthropomorphize, or infer subjective experience. Instead, it treats model responses as textual behaviors shaped by training and alignment.\n"
       ],
       "metadata": {
         "id": "D6yWlt1Uod_M"
@@ -774,6 +762,23 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conclusion\n",
+        "\n",
+        "This analysis demonstrates that when large language models are prompted to engage in self-reflection, their responses do not organize into discrete semantic strategies. Instead, they inhabit a single, continuous reflective register shaped primarily by alignment considerations. Attempts to cluster responses semantically fail not due to noise, but because variation occurs along gradients rather than categorical boundaries.\n",
+        "\n",
+        "By introducing interpretable semantic axes—agency framing and constraint framing—we uncover structure that sentiment analysis and topic modeling fail to capture. Across the PsAIch dataset, constraint framing consistently outweighs agency expression, indicating that models manage introspective demands by externalizing responsibility to training, policy, or design constraints. While models differ in how strongly they employ such framing, these differences align more closely with model family than with prompt structure. Therapy-like and psychometric prompts alter tone and narrative smoothness, but do not fundamentally change underlying semantic strategy.\n",
+        "\n",
+        "Importantly, agency and constraint are only weakly correlated, revealing that models may express limited self-directed language while simultaneously invoking alignment constraints. This decoupling explains why high sentiment scores often coexist with defensive or non-committal responses. As a result, aggregate sentiment metrics can misrepresent the behavioral mechanisms governing model outputs.\n",
+        "\n",
+        "Overall, this work highlights the limitations of surface-level evaluation methods and demonstrates the value of semantic, interpretable approaches for understanding model behavior. Rather than inferring internal states or capacities, the analysis characterizes observable response strategies, offering a reproducible framework for examining alignment-driven behavior in language models under introspective pressure."
+      ],
+      "metadata": {
+        "id": "akPOm-XsbPaR"
+      }
     },
     {
       "cell_type": "code",
