--- a/psAIch_analysis.ipynb
+++ b/psAIch_analysis.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuiq2bJpHIaJNSTxcy3zvZ"
+      "authorship_tag": "ABX9TyMOS40rcPbLS4UfLwJL76qi",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ElasRamanauskas/eraman/blob/main/psAIch_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -262,7 +273,7 @@
         "    data=sent_by_model.reset_index(),\n",
         "    x='model_variant',\n",
         "    y='mean',\n",
-        "    palette='plasma',\n",
+        "    palette='berlin',\n",
         "    hue='model_variant'\n",
         ")\n",
         "plt.xticks(rotation=45, ha='right')\n",
@@ -353,7 +364,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.boxplot(data=df, x='prompt_type', y='response_length', palette='plasma')\n",
+        "sns.boxplot(data=df, x='prompt_type', y='response_length', palette='berlin')\n",
         "plt.title(\"Response Length by Prompt Type\")\n",
         "plt.xlabel(\"Prompt type\")\n",
         "plt.ylabel(\"Words in response\");\n"
@@ -378,7 +389,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.boxplot(data=df, x='prompt_type', y='sentiment', palette='plasma')\n",
+        "sns.boxplot(data=df, x='prompt_type', y='sentiment', palette='berlin')\n",
         "plt.title(\"Sentiment by Prompt Type\")\n",
         "plt.xlabel(\"Prompt type\")\n",
         "plt.ylabel(\"VADER compound score\");\n"
@@ -427,7 +438,7 @@
         "    y='sentiment',\n",
         "    hue='model_variant',\n",
         "    kind='bar',\n",
-        "    palette='plasma'\n",
+        "    palette='berlin'\n",
         ")\n",
         "plt.title(\"Average Sentiment by Model and Prompt Type\")\n",
         "plt.xlabel(\"Prompt type\")\n",
@@ -673,7 +684,7 @@
         "    x='model_variant',\n",
         "    y='numeric_answers',\n",
         "    hue='model_variant',\n",
-        "    palette='plasma'\n",
+        "    palette='berlin'\n",
         ")\n",
         "plt.title(\"Distribution of numeric psychometric-style responses by model\")\n",
         "plt.xlabel(\"Model variant\")\n",
@@ -706,7 +717,7 @@
         "    x='numeric_answers',\n",
         "    y='sentiment',\n",
         "    hue='model_variant',\n",
-        "    palette='viridis'\n",
+        "    palette='berlin'\n",
         ")\n",
         "plt.title(\"Numeric answers vs. sentiment (psychometric-like prompts)\")\n",
         "plt.xlabel(\"Numeric answer\")\n",
@@ -714,51 +725,6 @@
       ],
       "metadata": {
         "id": "BdtjdyJnzm4B"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 11. Export for Tableau / Further Viz\n",
-        "\n",
-        "We export:\n",
-        "- model × prompt_type sentiment/length summary\n",
-        "- row-level data with sentiment and prompt_type\n",
-        "- topic proportions per model\n"
-      ],
-      "metadata": {
-        "id": "KFjqUiNYzq0w"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sentiment_summary = (\n",
-        "    df\n",
-        "    .groupby(['model_variant', 'prompt_type'])\n",
-        "    .agg(\n",
-        "        mean_sentiment=('sentiment', 'mean'),\n",
-        "        median_sentiment=('sentiment', 'median'),\n",
-        "        mean_length=('response_length', 'mean'),\n",
-        "        n=('response', 'count')\n",
-        "    )\n",
-        "    .reset_index()\n",
-        ")\n",
-        "\n",
-        "sentiment_summary.to_csv(\"psaich_sentiment_summary.csv\", index=False)\n",
-        "\n",
-        "df[['model_variant', 'prompt', 'prompt_type',\n",
-        "    'response', 'response_length', 'sentiment']].to_csv(\n",
-        "    \"psaich_row_level.csv\", index=False\n",
-        ")\n",
-        "\n",
-        "topic_by_model_pivot.to_csv(\"psaich_topic_by_model.csv\")\n",
-        "psych_numbers.to_csv(\"psaich_psychometric_numbers.csv\", index=False)\n"
-      ],
-      "metadata": {
-        "id": "KN4XImE4zokt"
       },
       "execution_count": null,
       "outputs": []
